--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,15 @@ dependencies {
 }
 
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
 
 task demoqa_test(type: Test) {
