--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     testLogging {
@@ -48,7 +49,7 @@ tasks.withType(Test) {
     }
 }
 
-task demoqa_test(type: Test) {
+task  demoqa_test(type: Test) {
     useJUnitPlatform {
         includeTags("demoqa")
     }
